# distributed-training-pytorch-eks

./: .gitignore  README.md  pyproject.toml  s3-policy.json
docker/: Dockerfile
eks-manifest/: cluster-example-1.yaml  cluster-example-2.yaml  cluster.yaml
k8s-manifest/: debug-pod.yaml  pytorch-job-cpu.yaml  pytorch-test.yaml
src/: distributed-test.py  distributed-training.py
